Rollback to Java 8